fix(archived-partups): adjusted the upper avatars and the count so they all align properly fixing #252

--- a/app/client/stylesheets/components/pu-avatar.sass
+++ b/app/client/stylesheets/components/pu-avatar.sass
@@ -11,9 +11,7 @@
     $label_position: translate3d(-3px, -14px, 0)
 
     &-inactive
-        width: 30px
-        height: 30px
-        filter: grayscale(100%); // geen IE support
+        filter: grayscale(100%) // geen IE support
 
     .pu-sub-image
         display: block
@@ -75,7 +73,7 @@
         background-image: url('/images/system-avatar.png')
 
     &-more
-        padding: 0 1px 0 0
+        padding: 8px 0 0 0
         background-color: $color-primary
         color: #fff
         font-weight: bold
