--- a/app/client/stylesheets/components/pu-partuptile.sass
+++ b/app/client/stylesheets/components/pu-partuptile.sass
@@ -91,7 +91,7 @@
 
             &.pu-avatar-more
                 filter: none
-                line-height: 34px
+                line-height: 17px
 
     .pu-sub-partup-stats
         overflow: hidden
